test/cli/test-mutating-policy/mutate-cluster-scoped-crd/gadget.yaml
apiVersion: example.com/v1
kind: Gadget
metadata:
  name: my-gadget
spec:
  color: blue
