test/cli/test-mutating-policy/mutate-cluster-scoped-crd/patched-gadget.yaml
apiVersion: example.com/v1
kind: Gadget
metadata:
  name: my-gadget
  annotations:
    testing: "true"
spec:
  color: blue
