test/cli/test-mutating-policy/mutate-cluster-scoped-crd/clusterresources.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: clusterresources
spec:
  crds:
    - crds/gadget-crd.yaml
