test/cli/test-mutating-policy/mutate-cluster-scoped-crd/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
clusterResources:
- clusterresources.yaml
kind: Test
metadata:
  name: test-set-annotations-for-cluster-scoped-gadget
policies:
- policy.yaml
resources:
- gadget.yaml
results:
- isMutatingPolicy: true
  kind: Gadget
  patchedResources: patched-gadget.yaml
  policy: set-annotations-for-gadget
  resources:
  - my-gadget
  result: pass
